@@ -612,7 +612,9 @@
       in \R versions between 3.0.0 and 3.2.3.
 
       \item \code{pretty(D)} for date-time objects \code{D} now also
-      works well if \code{range(D)} is (much) smaller than a second.
+      works well if \code{range(D)} is (much) smaller than a second.  In
+      the case of only one unique value in \code{D}, the pretty range
+      now is more symmetric around that value than previously.
     }
   }
 }
